<resources>
    <string name="app_name">Uniq App</string>
    <string name="app_slogan">Unsa\'y ayo ron?</string>
    <string name="new_event">New Event</string>

    <string name="account_name">Uniq App</string>
    <string name="account_email">troll@uniqapp.com</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Navigation Menu -->
    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_buddies">Buddies</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_my_posts">My Posts</string>
    <string name="nav_categories">Categories</string>

    <!-- New Post Hints -->

    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_slug">Slug</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_venue">Venue</string>
    <string name="hint_post">Post</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="days_offset">Days Offset Feeds</string>
    <string name="placeholder_category">Category</string>

    <!-- hint email -->
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password_confirm">Confirmation Password</string>

    <string name="hint_register">Register</string>
    <string name="hint_login">Login</string>

</resources>
